force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimeoutMs__c</fullName>
    <label>Timeout (ms)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>