force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TimestampCompleted__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimestampCompleted__c</fullName>
    <label>Timestamp (Completed)</label>
    <type>DateTime</type>
</CustomField>