force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TimestampReady__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimestampReady__c</fullName>
    <label>Timestamp (Ready)</label>
    <type>DateTime</type>
</CustomField>