force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TimestampRunning__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimestampRunning__c</fullName>
    <label>Timestamp (Running)</label>
    <type>DateTime</type>
</CustomField>