force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TimestampToRetry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimestampToRetry__c</fullName>
    <label>Timestamp (Retry No Earlier Than)</label>
    <type>DateTime</type>
</CustomField>