force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/vlocity_cmt__TranslatedState__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TranslatedState__c</fullName>
    <formula>TEXT( vlocity_cmt__State__c )</formula>
    <label>Translated State</label>
    <type>Text</type>
</CustomField>